Stop the gap when removed photon.css

--- a/assets/css/object/project/_page.scss
+++ b/assets/css/object/project/_page.scss
@@ -4,6 +4,7 @@
   width: 100%;
   overflow: hidden;
   font-size: calc(#{$preview-font-size} * 1.3);
+  page-break-inside: avoid;
 
   &::before {
     display: block;
